# yara-yaml

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
rules/: file-characteristics-block.yml  file-characteristics.yml
rules/network/: malicious-traffic-distribution.yml
src/: pyproject.toml
src/yarayaml/: builder.py  cli.py  filters.py  yarayaml.py
templates/: categories.tmpl  default.yar.j2  default.yar.tmpl  list.yar.tmpl
tests/: test_load_rules.py
vars/: macros.yml  main.yml
vars/macros/: redirector_ehihm302_cookie_names.yml  url_shortener_domains.yml
yarayaml/: __init__.py  builder.py  cli.py  exceptions.py  filters.py
